examples/test/testpolicy11322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11322
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key2: value2
      key45: value1
      key10: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value15
      podSelector:
        matchLabels:
          key24: value13
